--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,73 +2,45 @@
         
 
         <footer class="site-footer">
-            <div class="container">
-                <div class="row">
+            <div class="footer">
+                <ul class="footer-list">
+                   <li class="footer-list-item">
+                    <a href="https://www.facebook.com/fonelli.joyeria" class="social-icon-link ">
+                        <div class="pie">
+                            <img src="../assets/images/redes/face.png" >
+                        </div> 
+                    </a>
 
-                    <!-- <div class="col-12">
-                        <h5 class="text-white">
-                            <i class="bi-geo-alt-fill me-2"></i>
-                            State of Rio de Janeiro, Brazil
-                        </h5>
+                </li>                            
 
-                        <a href="mailto:info@company.com" class="custom-link mt-3 mb-5">
-                            info@company.com
-                        </a>
-                    </div> -->
+                <li class="footer-list-item">
+                    <a href="https://www.instagram.com/fonelli.joyeria/" class="social-icon-link ">
+                        <div class="pie">
+                            <img src="../assets/images/redes/insta.png" >
+                        </div> 
+                    </a>
 
-                    <!-- <div class="col-6">
-                        <p class="copyright-text mb-0">Copyright © Nomad Force 2021 
-                        
-                        <br><br>Design: <a href="https://templatemo.com/page/1" target="_parent">TemplateMo</a><br><br>
-                    
-                        Distributed By: <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
-                    </p>
-                    
-                    </div> -->
+                </li>
 
-                    <div class="col-lg-6 col-5 ms-auto">
-                        <ul class="social-icon">
-                            
-                            <li>
-                                <a href="" class="social-icon-link ">
-                                    <div class="pie">
-                                        <img src="../assets/images/face.png" >
-                                    </div> 
-                                </a>
+                <li class="footer-list-item">
+                    <a href="https://www.linkedin.com/company/joyeria-fonelli" class="social-icon-link ">
+                        <div class="pie">
+                            <img src="../assets/images/redes/Lin.png" >
+                        </div> 
+                    </a>
 
-                            </li>                            
+                </li>
 
-                            <li>
-                                <a href="" class="social-icon-link ">
-                                    <div class="pie">
-                                        <img src="../assets/images/insta.png" >
-                                    </div> 
-                                </a>
+                <li class="footer-list-item">
+                    <a href="https://www.tiktok.com/@fonelli.joyeria" class="social-icon-link ">
+                        <div class="pie">
+                            <img src="../assets/images/redes/Tik.png" >
+                        </div> 
+                    </a>
 
-                            </li>
+                </li>
+               
+                </ul>
 
-                            <li>
-                                <a href="" class="social-icon-link ">
-                                    <div class="pie">
-                                        <img src="../assets/images/Lin.png" >
-                                    </div> 
-                                </a>
-
-                            </li>
-
-                            <li>
-                                <a href="" class="social-icon-link ">
-                                    <div class="pie">
-                                        <img src="../assets/images/Tik.png" >
-                                    </div> 
-                                </a>
-
-                            </li>
-
-
-                        </ul>
-                    </div>
-
-                </div>
-            </div>
+              </div>
         </footer>
