--- a/src/app/components/distribuidores/distribuidores.component.html
+++ b/src/app/components/distribuidores/distribuidores.component.html
@@ -1,2 +1,39 @@
-<app-sidenav></app-sidenav>
-
+<ngb-carousel >
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper">
+        <img src="../../../assets/images/banner_distribuidor/1.jpg" alt="Random first slide">
+      </div>
+      <div class="carousel-caption">
+        <h3>10 seconds between slides...</h3>
+        <p>This carousel uses customized default values.</p>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper">
+        <img src="../../../assets/images/banner_distribuidor/img_2.jpg" alt="Random second slide">
+      </div>
+      <div class="carousel-caption">
+        <h3>No mouse events...</h3>
+        <p>This carousel doesn't pause or resume on mouse events</p>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper">
+        <img src="../../../assets/images/banner_distribuidor/img_3.jpg"  alt="Random third slide">
+      </div>
+      <div class="carousel-caption">
+        <h3>No keyboard...</h3>
+        <p>This carousel uses customized default values.</p>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper">
+        <img src="../../../assets/images/banner_distribuidor/img_4.jpg" alt="Random fourth slide">
+      </div>
+      <div class="carousel-caption">
+        <h3>And no wrap after last slide.</h3>
+        <p>This carousel uses customized default values.</p>
+      </div>
+    </ng-template>
+  </ngb-carousel>
+  
