--- a/src/app/components/estadocuenta/estadocuenta.component.html
+++ b/src/app/components/estadocuenta/estadocuenta.component.html
@@ -1,35 +1,5 @@
 
-<div class="example-container" [class.example-is-mobile]="mobileQuery.matches" *ngIf="shouldRun">
-    <mat-toolbar >
-      <button class="btn btn-primary" (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
-      <div class="cat ">
-        <a href="#">
-          <img  src="../../../assets/images/principal/logo_fonelli.png"  >
-        </a>      
-      </div>
-      <button (click)="EliminaSesion()" class="btn btn-primary btn-sm ml-auto">Cerrar Sesión</button>
-    </mat-toolbar>
-  
-    <mat-sidenav-container class="example-sidenav-container"
-                           [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
-      <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
-                   [fixedInViewport]="mobileQuery.matches" fixedTopGap="56"
-                   [opened]="mobileQuery.matches ? 'false' : 'true'">
-        <mat-nav-list>
-        
-          <a mat-list-item [routerLink]="['/distribuidores/']"> <span class="font_side">Inicio</span></a>
-          <a mat-list-item [routerLink]="['/distribuidores/datoscliente/']"><span class="font_side">Datos generales de Clientes</span></a>
-          <a mat-list-item [routerLink]="['/distribuidores/consultaprecios/']"><span class="font_side">Consulta de Precios</span></a>
-          <a mat-list-item [routerLink]="['/distribuidores/consultapedidos/']"><span class="font_side">Consulta de Pedidos</span></a>
-          <a mat-list-item [routerLink]="['/distribuidores/relacionpedidos/']"><span class="font_side">Relación de Pedidos</span></a> 
-          <a mat-list-item [routerLink]="['/distribuidores/estadocuenta/']"><span class="font_side">Estado de Cuenta</span></a>
-          <a mat-list-item [routerLink]="['/distribuidores/ventasclientearticulo/']"><span class="font_side">Ventas por Artículo</span></a>
-          
-        </mat-nav-list>
-      </mat-sidenav>
-  
-  
-      
+ 
       <section >
         <div class="row">
           <div class="col-lg-6">
@@ -152,81 +122,161 @@
         </div>
 
         <div *ngIf="bBandera" class="table-responsive-sm">
-          <table class="table table-hover table-striped">
+          <table class="table table-hover table-striped  ">
             <thead>
-              <tr>
-                <th>Cliente</th>
-                <th>Oficina</th>
-                <th>Folio</th>
-                <th>Saldo</th>
+              <tr class="bg-info">
+                <th>OF</th><!--Codigo oficina -->
+                <th>C</th><!--Codigo tipo cartera -->
+                <th>S</th><!--Documento serie -->
+                <th>DOCTO</th><!--Documento folio -->
+                <th>FECHA EXP</th><!--Fecha expedicion -->
+                <th>FECHA VENG</th><!--Fecha vencimiento -->
+                <th class="text-right">CARGOS</th><!--Cargos -->
+                <th class="text-right">ABONOS</th><!--Abonos -->
+                <th class="text-right">SALDO</th><!--Saldo -->
+                <th>DIAS</th><!--Dias vencimiento -->
+                <th class="text-right">VENCIDO</th><!--Saldo vencido -->
+                <th>S</th><!--Documento2 Serie -->
+                <th>REFCIA</th><!--Referencia -->
               </tr>
             </thead>
             <tbody>
               <ng-container *ngFor="let cliente of oCliente ">
-                <tr>
-                  <td>{{cliente.ClienteCodigo+'-'+cliente.ClienteFilial}}</td>
+                <tr class="table-info">
+                  <td colspan="13">{{'('+cliente.ClienteCodigo+' '+cliente.ClienteFilial+ ') ' +cliente.ClienteNombre+ '-' +cliente.Sucursal}}</td>
                 </tr>
-                <ng-container *ngFor="let cartera of cliente.TipoCartera; let idx2 = index">
-               <tr>
+              <ng-container *ngFor="let cartera of cliente.TipoCartera;">
+               <!-- <tr>
                   <td></td>
                   <td>{{cartera.TipoCarteraCodigo}}</td>
                   <td>{{cartera.TipoCarteraDescripc}}</td>
                   <td></td>
-                </tr>
+                </tr> -->
                 <tr *ngFor="let movimento of cartera.Movimientos; let idx3 = index">
                   <!-- <td>{{idx1 + '-' + idx2 + '-' + idx3 }}</td> -->
-                  <td>{{ movimento.OficinaFonelliCodigo}}</td>
-                  <td>{{ movimento.DocumentoFolio}}</td>
-                  <td>{{movimento.Saldo}}</td>
+                  <td>{{movimento.OficinaFonelliCodigo}}</td>
+                  <td>{{cartera.TipoCarteraCodigo}}</td>
+                  <td>{{movimento.DocumentoSerie}}</td>
+                  <td>{{movimento.DocumentoFolio}}</td>
+                  <td>{{movimento.FechaExpedicion}}</td>
+                  <td>{{movimento.FechaVencimiento}}</td>
+                  <td  class="text-right">{{movimento.Cargos}}</td>
+                  <td  class="text-right">{{movimento.Abonos}}</td>
+                  <td  class="text-right">{{movimento.Saldo}}</td>
+                  <td>{{movimento.DiasVencimiento}}</td>
+                  <td  class="text-right">{{movimento.SaldoVencido}}</td>
+                  <td>{{movimento.Documento2Serie}}</td>
+                  <td>{{movimento.Referencia}}</td>                
                 </tr>
-                  <tr>
-                      <th></th>
-                      <th></th>
-                    <th>Sum</th>
-                    <th>{{getTotalCuenta(cartera.Movimientos)}}</th>
-                  </tr> 
-           
-          
-          
+                <tr>
+                  <td></td>
+                  <td>{{cartera.TipoCarteraCodigo}}</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td  class="text-right">{{cartera.TipoCarteraDescripc}}</td>
+                  <td  class="text-right">{{getTotalCargos(cartera.Movimientos)}}</td>
+                  <td  class="text-right">{{getTotalAbonos(cartera.Movimientos)}}</td>
+                  <td  class="text-right">{{getTotalSaldo(cartera.Movimientos)}}</td>
+                  <td></td>
+                  <td  class="text-right">{{getTotalVencido(cartera.Movimientos)}}</td>
+                  <td></td>
+                </tr>
               </ng-container>
              
-                  <tr>
-                      <th></th>
-                      <th></th>
-                    <th>Sum</th>
-                    <th>{{getTotalCliente(cliente)}}<th>
-                  </th> 
-              
-              </ng-container>
-              
-            </tbody>
-          
-                  <!-- <tr>
-                      <th></th>
-                      <th></th>
-                    <th>Sum</th>
-                    <th>{{getTotal}}</th>
-                  </tr>
-               -->
-               
+            </ng-container>              
+            </tbody>               
           </table>
-
-
       </div> 
+
+      <br>
+      <br>
+<!-- Tablas resumen status cliente y resumen tipo cliente  -->
+      <div *ngIf="bBandera" >
+        <div class="container">
+          <div class="row">
+
+            <div class="col-12 col-lg-2">
+              <table class="table table-sm  table-responsive">
+                <thead>
+                  <tr class="bg-info">
+                    <th colspan="2">CLIENTES</th>
+                  
+                  </tr>
+                </thead>
+                <tbody>
+                  <ng-container *ngFor="let cliente of oResumenStatusCliente ">
+                    <tr>
+                      <td>{{cliente.StatusClienteDescripc}}</td>
+                      <td  class="text-right">{{cliente.StatusClienteNumero}}</td>
+                    </tr>              
+                </ng-container>              
+                </tbody>               
+              </table>
+            </div>
+
+
+            <div class="col-12 col-lg-2">
+              <table class="table table-sm  ">
+                <thead>
+                  <tr class="bg-info">
+                    <th>TC</th>
+                    <th>TOTAL</th>                  
+                  </tr>
+                </thead>
+                <tbody>
+                  <ng-container *ngFor="let resCliente of oResumenTipoCliente ">
+                    <tr>
+                      <td>{{resCliente.TipoClienteCodigo}}</td>
+                      <td class="text-right">{{resCliente.TipoClienteTotal}}</td>
+                    </tr>              
+                </ng-container>              
+                </tbody>               
+              </table>
+            </div>
+
+            <br>
+            <br>
+            <h2>Resumen Tipos de Cartera</h2>
+            <!-- Tablas resumen status cliente y resumen tipo cliente  -->
+            <div *ngIf="bBandera" >
+              <table class="table table-sm  ">
+                <thead>
+                  <tr class="bg-info">
+                    <th>CART</th>
+                    <th>DESCRIPCION</th>                  
+                    <th class="text-right">CARGOS</th>                  
+                    <th class="text-right">ABONOS</th>                  
+                    <th class="text-right">SALDO</th>                  
+                    <th class="text-right">SALDO VENCIDO</th>                  
+                  </tr>
+                </thead>
+                <tbody>
+                  <ng-container *ngFor="let resCartera of oResumenTipoCartera ">
+                    <tr>
+                      <td>{{resCartera.TipoCarteraCodigo}}</td>
+                      <td>{{resCartera.TipoCarteraDescripc}}</td>
+                      <td class="text-right">{{resCartera.TipoCarteraCargos}}</td>
+                      <td class="text-right">{{resCartera.TipoCarteraAbonos}}</td>
+                      <td class="text-right">{{resCartera.TipoCarteraSaldo}}</td>
+                      <td class="text-right">{{resCartera.TipoCarteraSaldoVencido}}</td>
+                    </tr>              
+                </ng-container>              
+                </tbody>               
+              </table>
+            </div>           
+
+            
+            
+          </div>
+        </div>
+       
+        
+    </div> 
+
+
 
       </section>
   
   
-      
-    </mat-sidenav-container>
-  </div>
-  
-  <div *ngIf="!shouldRun">Please open on Stackblitz to see result</div>
-  
-  
-  
-  
-  
-  <!-- Copyright 2022 Google LLC. All Rights Reserved.
-      Use of this source code is governed by an MIT-style license that
-      can be found in the LICENSE file at https://angular.io/license -->
+   
